Fix Bootsnap cache path in CI workflow
Corrects the path for the Bootsnap cache by making it absolute. The `actions/cache` action does not use the `working-directory` input, so the path must be specified from the workspace root to ensure the cache is correctly located.

--- a/.github/workflows/ruby-tests.yml
+++ b/.github/workflows/ruby-tests.yml
@@ -81,9 +81,8 @@ jobs:
           working-directory: ${{ env.APP_DIR }}
       - name: Cache Bootsnap
         uses: actions/cache@v4
-        working-directory: ${{ env.APP_DIR }}
         with:
-          path: spec/dummy/tmp/cache
+          path: ${{ env.APP_DIR }}/spec/dummy/tmp/cache
           key: bootsnap-${{ runner.os }}-${{ env.RUBY_VERSION }}-${{ hashFiles('**/Gemfile.lock') }}
       - name: Prepare database
         working-directory: ${{ env.APP_DIR }}
