feat(ci): Run E2E tests against a remote Selenium container
Updates the CI workflow to run E2E tests using a dedicated Selenium Firefox service. This decouples the browser dependency from the test runner environment.

A new `require_browser` input is added to the reusable test workflow. When true, a Selenium container is started, and the tests are configured to connect to it. Unit tests run without this service, simplifying their execution environment.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,6 +71,7 @@ jobs:
     uses: ./.github/workflows/ruby-tests.yml
     with:
       rspec_task: "bin/rspec-unit --profile 10"
+      require_browser: false
       upload_coverage: true
       qlty_coverage: true
     secrets:
@@ -81,4 +82,5 @@ jobs:
     uses: ./.github/workflows/ruby-tests.yml
     with:
       rspec_task: "bin/rspec-e2e --profile 10"
+      require_browser: true
       upload_coverage: false
