build: Remove unused Firefox dependency from CI
Removes the Firefox package from the list of dependencies installed in the Ruby test workflow.

The browser is no longer required to run the test suite, and removing it speeds up the build process.

--- a/.github/workflows/ruby-tests.yml
+++ b/.github/workflows/ruby-tests.yml
@@ -61,7 +61,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install --no-install-recommends -y \
-            build-essential git libpq-dev libyaml-dev pkg-config firefox
+            build-essential git libpq-dev libyaml-dev pkg-config
       - name: Checkout
         uses: actions/checkout@v5
 
