--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,23 +66,19 @@ jobs:
           working-directory: ${{ env.APP_DIR }}
       - name: Reek
         run: bin/reek
-
   tests:
     needs: [lint, reek]
-    uses: ./.github/workflows/ruby-tests.yml
+    uses: ./.github/workflows/ruby-unit-tests.yml
     with:
       rspec_task: "bin/rspec-unit --profile 10"
-      require_browser: false
       upload_coverage: false
-
+    secrets:
+      QLTY_COVERAGE_TOKEN: ${{ secrets.QLTY_COVERAGE_TOKEN }}
   e2e_tests:
     needs: [lint, reek]
-    uses: ./.github/workflows/ruby-tests.yml
+    uses: ./.github/workflows/ruby-e2e-tests.yml
     with:
       rspec_task: "bin/rspec-e2e --profile 10"
-      require_browser: true
-      upload_coverage: false
-
   push:
     name: Build & Push gem
     runs-on: ubuntu-latest
