Fix remote Capybara tests in CI
Configures Capybara and the Selenium container to allow the browser running inside Docker to connect back to the test application server.

This uses `host.docker.internal` to provide a stable hostname for the Selenium container to reach the host machine where the Capybara server is running.

--- a/.github/workflows/ruby-e2e-tests.yml
+++ b/.github/workflows/ruby-e2e-tests.yml
@@ -20,6 +20,7 @@ jobs:
         image: selenium/standalone-firefox:latest
         ports: ["4444:4444"]
         options: >-
+          --add-host=host.docker.internal:host-gateway
           --health-cmd="/opt/bin/check-grid.sh || exit 1"
           --health-interval=10s
           --health-timeout=5s
@@ -77,5 +78,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: screenshots
-          path: ${{ env.APP_DIR }}/tmp/screenshots
+          path: ${{ env.APP_DIR }}/spec/dummy/tmp/screenshots
           if-no-files-found: ignore
