--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -3,6 +3,7 @@ permissions:
 name: Danger
 on:
   pull_request:
+    types: [opened, synchronize, reopened]
 concurrency:
   group: danger
   cancel-in-progress: true
