--- a/.github/workflows/ruby-e2e-tests.yml
+++ b/.github/workflows/ruby-e2e-tests.yml
@@ -7,9 +7,21 @@ on:
         type: string
         description: Command to run tests (e.g., bin/rspec-unit or bin/rspec-e2e)
     outputs:
-      app_screenshots_url:
-        description: URL of uploaded app screenshots artifact
-        value: ${{ jobs.test.outputs.app_screenshots_url }}
+      app_screenshots_en_au_url:
+        description: URL to download the app screenshots artifact (en-AU)
+        value: ${{ jobs.test.outputs.app_screenshots_en_au_url }}
+      app_screenshots_en_au_ocker_url:
+        description: URL to download the app screenshots artifact (en-AU-ocker)
+        value: ${{ jobs.test.outputs.app_screenshots_en_au_ocker_url }}
+      app_screenshots_en_ca_url:
+        description: URL to download the app screenshots artifact (en-CA)
+        value: ${{ jobs.test.outputs.app_screenshots_en_ca_url }}
+      app_screenshots_en_us_url:
+        description: URL to download the app screenshots artifact (en-US)
+        value: ${{ jobs.test.outputs.app_screenshots_en_us_url }}
+      app_screenshots_en_us_pirate_url:
+        description: URL to download the app screenshots artifact (en-US-pirate)
+        value: ${{ jobs.test.outputs.app_screenshots_en_us_pirate_url }}
 permissions:
   contents: read
 env:
@@ -19,7 +31,11 @@ jobs:
   test:
     runs-on: ubuntu-latest
     outputs:
-      app_screenshots_url: ${{ steps.upload-screenshots.outputs.artifact-url }}
+      app_screenshots_en_au_url: ${{ steps.upload-screenshots-en-au.outputs.artifact-url }}
+      app_screenshots_en_au_ocker_url: ${{ steps.upload-screenshots-en-au-ocker.outputs.artifact-url }}
+      app_screenshots_en_ca_url: ${{ steps.upload-screenshots-en-ca.outputs.artifact-url }}
+      app_screenshots_en_us_url: ${{ steps.upload-screenshots-en-us.outputs.artifact-url }}
+      app_screenshots_en_us_pirate_url: ${{ steps.upload-screenshots-en-us-pirate.outputs.artifact-url }}
     services:
       firefox:
         image: selenium/standalone-firefox:latest
@@ -78,14 +94,42 @@ jobs:
           DATABASE_URL: postgres://postgres:postgres@localhost:5432
           SELENIUM_REMOTE_URL: http://localhost:4444/wd/hub
         run: ${{ inputs.rspec_task }}
-      - name: Keep app screenshots
+      - name: Upload app screenshots artifact (en-AU)
         uses: actions/upload-artifact@v4
-        id: upload-screenshots
+        id: upload-screenshots-en-au
         with:
-          name: app-screenshots
-          path: ${{ env.APP_DIR }}/spec/dummy/tmp/app-screenshots
+          name: app-screenshots-en-au
+          path: ${{ env.APP_DIR }}/spec/dummy/tmp/app-screenshots/en-AU
           if-no-files-found: error
-      - name: Keep screenshots from failed system tests
+      - name: Upload app screenshots artifact (en-AU-ocker)
+        uses: actions/upload-artifact@v4
+        id: upload-screenshots-en-au-ocker
+        with:
+          name: app-screenshots-en-au-ocker
+          path: ${{ env.APP_DIR }}/spec/dummy/tmp/app-screenshots/en-AU-ocker
+          if-no-files-found: error
+      - name: Upload app screenshots artifact (en-CA)
+        uses: actions/upload-artifact@v4
+        id: upload-screenshots-en-ca
+        with:
+          name: app-screenshots-en-ca
+          path: ${{ env.APP_DIR }}/spec/dummy/tmp/app-screenshots/en-CA
+          if-no-files-found: error
+      - name: Upload app screenshots artifact (en-US)
+        uses: actions/upload-artifact@v4
+        id: upload-screenshots-en-us
+        with:
+          name: app-screenshots-en-us
+          path: ${{ env.APP_DIR }}/spec/dummy/tmp/app-screenshots/en-US
+          if-no-files-found: error
+      - name: Upload app screenshots artifact (en-US-pirate)
+        uses: actions/upload-artifact@v4
+        id: upload-screenshots-en-us-pirate
+        with:
+          name: app-screenshots-en-us-pirate
+          path: ${{ env.APP_DIR }}/spec/dummy/tmp/app-screenshots/en-US-pirate
+          if-no-files-found: error
+      - name: Upload error screenshots artifact
         if: failure()
         uses: actions/upload-artifact@v4
         with:
