lang: Add localization: en-IND
Introduces the `en-IND` locale, making the admin interface available in English (India).

This includes:
- Adding the `en-IND.yml` translation file.
- Registering the new locale within the application engine and updating tests.
- Adding a new documentation page with screenshots for the `en-IND` admin UI.
- Updating the documentation deployment workflow to trigger on version tags.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,5 +113,6 @@ jobs:
             | en-BORK | [Bork \(Swedish Chef\)](${{ needs.e2e_tests.outputs.app_screenshots_en_bork_url }}) |
             | en-CA | [English \(Canada\)](${{ needs.e2e_tests.outputs.app_screenshots_en_ca_url }}) |
             | en-GB | [English \(United Kingdom\)](${{ needs.e2e_tests.outputs.app_screenshots_en_gb_url }}) |
+            | en-IND | [English \(India\)](${{ needs.e2e_tests.outputs.app_screenshots_en_ind_url }}) |
             | en-US | [English \(United States\)](${{ needs.e2e_tests.outputs.app_screenshots_en_us_url }}) |
             | en-US-pirate | [English \(Pirate\)](${{ needs.e2e_tests.outputs.app_screenshots_en_us_pirate_url }}) |
