--- a/.github/workflows/ruby-e2e-tests.yml
+++ b/.github/workflows/ruby-e2e-tests.yml
@@ -25,6 +25,9 @@ on:
       app_screenshots_en_ind_url:
         description: URL to download the app screenshots artifact (en-IND)
         value: ${{ jobs.test.outputs.app_screenshots_en_ind_url }}
+      app_screenshots_en_ke_url:
+        description: URL to download the app screenshots artifact (en-KE)
+        value: ${{ jobs.test.outputs.app_screenshots_en_ke_url }}
       app_screenshots_en_us_url:
         description: URL to download the app screenshots artifact (en-US)
         value: ${{ jobs.test.outputs.app_screenshots_en_us_url }}
@@ -46,6 +49,7 @@ jobs:
       app_screenshots_en_ca_url: ${{ steps.upload-screenshots-en-ca.outputs.artifact-url }}
       app_screenshots_en_gb_url: ${{ steps.upload-screenshots-en-gb.outputs.artifact-url }}
       app_screenshots_en_ind_url: ${{ steps.upload-screenshots-en-ind.outputs.artifact-url }}
+      app_screenshots_en_ke_url: ${{ steps.upload-screenshots-en-ke.outputs.artifact-url }}
       app_screenshots_en_us_url: ${{ steps.upload-screenshots-en-us.outputs.artifact-url }}
       app_screenshots_en_us_pirate_url: ${{ steps.upload-screenshots-en-us-pirate.outputs.artifact-url }}
     services:
@@ -147,6 +151,13 @@ jobs:
         with:
           name: app-screenshots-en-ind
           path: ${{ env.APP_DIR }}/spec/dummy/tmp/app-screenshots/en-IND
+          if-no-files-found: error
+      - name: Upload app screenshots artifact (en-KE)
+        uses: actions/upload-artifact@v4
+        id: upload-screenshots-en-ke
+        with:
+          name: app-screenshots-en-ke
+          path: ${{ env.APP_DIR }}/spec/dummy/tmp/app-screenshots/en-KE
           if-no-files-found: error
       - name: Upload app screenshots artifact (en-US)
         uses: actions/upload-artifact@v4
