lang: Add localization: en-MS
Adds comprehensive support for the English (Montserrat) `en-MS` locale.

This includes adding the translation file, updating the list of available languages, and integrating the new locale into the CI workflow for end-to-end testing and screenshot generation.

Additionally, documentation and feature tests are updated to include and validate the new language option.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,5 +115,6 @@ jobs:
             | en-GB | [English \(United Kingdom\)](${{ needs.e2e_tests.outputs.app_screenshots_en_gb_url }}) |
             | en-IND | [English \(India\)](${{ needs.e2e_tests.outputs.app_screenshots_en_ind_url }}) |
             | en-KE | [English \(Kenya\)](${{ needs.e2e_tests.outputs.app_screenshots_en_ke_url }}) |
+            | en-MS | [English \(Montserrat\)](${{ needs.e2e_tests.outputs.app_screenshots_en_ms_url }}) |
             | en-US | [English \(United States\)](${{ needs.e2e_tests.outputs.app_screenshots_en_us_url }}) |
             | en-US-pirate | [English \(Pirate\)](${{ needs.e2e_tests.outputs.app_screenshots_en_us_pirate_url }}) |
