lang: Add localization: en-PK
Adds a new locale file for Nigerian English (`en-PK`) to provide translations for the admin interface.

Moved IND to IN

This includes translations for UI text, model attributes, error messages, and hints. New documentation with screenshots for both light and dark themes is also added for the new locale.

--- a/.github/workflows/ruby-e2e-tests.yml
+++ b/.github/workflows/ruby-e2e-tests.yml
@@ -113,6 +113,7 @@ jobs:
   app_screenshots:
     runs-on: ubuntu-latest
     needs: [discover_locales]
+    if: github.event_name == 'pull_request'
     strategy:
       fail-fast: false
       matrix: ${{ fromJSON(needs.discover_locales.outputs.locales_matrix_json) }}
