lang: Add localization: en-GH
Adds a new locale file for Ghana English (`en-GH`) to provide translations for the admin interface.

This includes translations for UI text, model attributes, error messages, and hints. New documentation with screenshots for both light and dark themes is also added for the new locale.

closes: #209

--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -4,8 +4,9 @@ name: Danger
 on:
   pull_request:
     types: [opened, synchronize, reopened]
+
 concurrency:
-  group: danger
+  group: ${{ github.workflow }}-${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.pull_request.number) || format('ref-{0}', github.ref) }}
   cancel-in-progress: true
 env:
   RUBY_VERSION: 3.4.3
