--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,35 +88,6 @@ jobs:
     needs: [e2e_tests]
     runs-on: ubuntu-latest
     steps:
-      - id: table
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const labels = JSON.parse(${{ toJSON(needs.e2e_tests.outputs.locales_labels_json) }});
-            const { data } = await github.rest.actions.listWorkflowRunArtifacts({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              run_id: context.runId,
-              per_page: 100
-            });
-
-            const rows = [];
-            for (const a of data.artifacts) {
-              if (!a.name.startsWith("app-screenshots-")) continue;
-              const code = a.name.replace("app-screenshots-", "");
-              const label = labels[code] ?? code;
-              const safeLabel = label.replace(/\(/g, "\\(").replace(/\)/g, "\\)");
-              const uiUrl = `${context.serverUrl}/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}/artifacts/${a.id}`;
-              rows.push({ code, label: safeLabel, uiUrl });
-            }
-
-            rows.sort((a, b) => a.label.localeCompare(b.label, undefined, { sensitivity: "base" }));
-
-            const table = rows.length
-              ? `| Locale | Link |\n| ------ | ---- |\n${rows.map(r => `| ${r.code} | [${r.label}](${r.uiUrl}) |`).join("\n")}`
-              : "_No app screenshots were uploaded._";
-
-            core.setOutput("table", table);
       - uses: marocchino/sticky-pull-request-comment@v2
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -128,6 +99,4 @@ jobs:
             | ---- | ---- |
             | Commit | ${{ github.event.pull_request.head.sha }} |
             | Workflow | ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }} |
-
-            ## App Screenshots
-            ${{ steps.table.outputs.table }}
+            | Screenshots | [Download](${{ needs.e2e_tests.outputs.screenshot_files }}) |
