--- a/.github/workflows/ruby-e2e-tests.yml
+++ b/.github/workflows/ruby-e2e-tests.yml
@@ -86,7 +86,7 @@ jobs:
           path: ${{ env.APP_DIR }}/spec/dummy/tmp/screenshots
           if-no-files-found: ignore
   app_screenshots:
-    runs-on: ubuntu-latest
+    runs-on: arc-runner-set
     if: github.event_name == 'pull_request'
     outputs:
       screenshot_files: ${{ steps.upload_screenshots.outputs.artifact-url }}
