--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,7 +9,7 @@ updates:
     schedule:
       interval: daily
   - package-ecosystem: bundler
-    directory: /scripts
+    directory: /docs
     schedule:
       interval: daily
   - package-ecosystem: github-actions
